yiltc/testsuite/negative/pipe_operator.yilt
// Negative: pipe operator `|>` is not supported.
fn main()
    let x = 5
    let y = x |> double |> print
